fixed layout issues with footer social images and header nav

--- a/app/styles/config/_config.scss
+++ b/app/styles/config/_config.scss
@@ -10,7 +10,8 @@ $base-line-height:1.5;				// page base line height
 // colors
 $pg-background: #000;				// Black
 $pg-background-2: #FFD700;			// Gold
-$text: #fff;						// White	
+$text: #fff;					    // White	
+$nav-btn-border: #000;              // Black
 
 
 //--------------------------------
