--- a/app/styles/layout/_layout.scss
+++ b/app/styles/layout/_layout.scss
@@ -70,6 +70,6 @@
 
 .l-body-footer{
 	width:100%;
-	height: 270px;
+	height: 300px;
 	background: $pg-background-2;
 }
