--- a/app/styles/modules/_modules.scss
+++ b/app/styles/modules/_modules.scss
@@ -30,7 +30,7 @@
 	// reponsive layout for tablets and up
 	@media only screen and (min-width: 850px) { 
 		@include make-sm-column(7);
-		margin-top: 370px;		
+		margin-top: 330px;		
 	}
 }
 
@@ -38,15 +38,15 @@
 	margin-top: -20	px;
 	padding-right: 0px;
 	padding-left: 0px;
-	background:red;
 	//BEM element for .naviList
 	&__item{
 		display: inline-block;
-		margin-right: 5px;
-		margin-left: 5px;
+		margin-right: 20px;
+		margin-left: 20px;
 		padding-right: 20px;
 		padding-left:20px;
 		border: 2px solid $text;
+		background-clip: padding-box;
 	}
 }
 
@@ -134,28 +134,32 @@
 .social-icons{
 	margin-right: auto;
 	margin-left: auto;
-	padding-top: 75px;
+	padding-top: 95px;
 	width:100%;
+	text-align: center;
 	@media only screen and (min-width: 850px) {
-		padding-left: 150px;
-		width:70%;
+		width:80%;
 	}
 	//BEM Element for .social-icons
 	&__item{
 		display: inline-block;
-		margin-right: 15px;
-		margin-left: 15px;
+		margin-right: auto;
+		margin-left: auto;
+		padding-right: 10px;
+		padding-left: 10px;
 		width:50px;
 		height:50px;
+		//media query for BEM Element 
+		// reponsive layout for tablets and up
 		@media only screen and (min-width: 850px) {
 			width:80px;
 			height:80px;
-	}
+		}
 	}
 }
 
 .foot-text{
 	padding-top: 20px;
 	text-align: center;
-	font-size: em(20px)
+	font-size: em(20px);
 }
